--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <ul class="nav-list" class="icon-link">
         <li>
-            <a href="/Resume-HaydenChapman.docx"><h6>resume.</h6></a>              
+            <a href="/Resume-HaydenChapman.pdf"><h6>resume.</h6></a>              
         </li>
     </ul>
 
