html and added selfie

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <div class="about-heading">
                     <h1>About</h1>
                     <h6>Myself</h6>
+                    
                 </div>
                     <p>
                         Software engineer currently specializing in Full Stack Java.
@@ -87,7 +88,7 @@
                         <br>
                         Previously I studied physical architecture, but since then my interests have turned to software systems and computer architecture. <br>
                         <br>
-                        <br>
+                        <img src="me.jpg">
                     </p>
                 </div>  
             </div>
@@ -108,9 +109,9 @@
                     <h1>Backend Development</h1>
                     <p>
                         <ul>
-                        <li>Java / C# / C++ </li>
-                        <li>Spring Boot / ASP.NET</li>
-                        <li>NodeJs / Hibernate / Lombok</li>
+                        <li>Java / C# / C++ / ASP.NET</li>
+                        <li>Spring Boot / NodeJs / ExpressJs</li>
+                        <li>Apache Maven / Hibernate / Lombok </li>
                         </ul>
                     </p>
                 </div>
@@ -121,8 +122,7 @@
                     <h1>Front End Developement</h1>
                     <p>
                         <ul>
-                            <li>HTML5 / CSS3 / JavaScript</li>
-                            <li>React / Axios / Express</li>
+                            <li>HTML5 / CSS3 / JavaScript / React</li>
                         </ul>
                     </p>
                 </div>
