update bpaa and analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="/main.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9KS582NLGQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9KS582NLGQ');
+</script>
 
 <body>
     <!--hamburger menu-->
@@ -43,12 +52,10 @@
         </nav>
 
         <div class="landing-text">
-            <h1>Hayden Chapman</h1>
-            <h6>Full Stack Software Engineer</h6>
+            <h1>Hello, my name is Hayden Chapman</h1>
+            <h3>I am a full stack software developer, welcome!</h3>
             <br>
-            <h6>Currently seeking entry level software engineer positions.</h6>
-            <br>
-            <h6>I'm glad you have taken the time to come to my website, please scroll and view more of my work below.</h6>
+            <h6>I'm glad you have taken the time to come to my website, please view more of my work below.</h6>
         </div>
     </header>
 
@@ -81,12 +88,14 @@
                     
                 </div>
                     <p>
-                        Software engineer currently specializing in Full Stack Java.
+                        I am software engineer with experience in both frontend and backend tech, as well as CRM/SEO/Marketing software.
+                        <br>
+                        I am currently seeking engineer/developer positions in the DFW area or remote.
                         <br>
                         I have strong interest in human computer interaction, decentralized applications and automotive engineering & motorsports. <br>
-                        { I like computers, code, cars and robots.... and robot cars. } <br>
+                        { I like computers, code, cars and robots.... and robot cars. }<br>
                         <br>
-                        Previously I studied physical architecture, but since then my interests have turned to software systems and computer architecture. <br>
+                        I enjoy the intersection of art and technology.
                         <br>
                         <img src="me.jpg">
                     </p>
@@ -233,6 +242,14 @@
             
                 <div class="timeline">
                     <ul>
+                        <li class="date" data-date="2023-2024">
+                            <h1><a href="https://www.bpaa.com">Bowling Proprietors' Association of America</a></h1>
+                            <p>
+                            <br>
+                            <strong>Web Support Specialist</strong><br>
+                            BPAA is a non-profit organization — the only one in the world that serves the specific, yet diverse, interests of bowling center owners. I provided multiple web services including web design/development, email hosting, and site maintenance for over 200 BPAA members, bowling industry businesses, and governing bodies of bowling at the International Bowling Campus.  Serve as the primary contact with BPAA web service end users, handling and resolving customer requests or bug fixes, including both Salesforce CRM software products and custom development. Resolved customer web support tickets for their products and handled internal requests for development of association related web services and internal Salesforce troubleshooting. Responsible for IT administrative functions including data permissions, field validation, organizational role management and user security, helping supervise a customer base of over 200 Salesforce software licenses.<br>                  
+                            </p>
+                        </li>
                         <li class="date" data-date="2022-2023">
                             <h1><a href="https://www.devmountain.com">Dev Mountain Student Dev</a></h1>
                             <p>
@@ -301,7 +318,7 @@
         <div class="up" id="up">
             <i class="fas fa-chevron-up"></i>
         </div>
-        <p>&copy; 2023 Made with &hearts; by Hayden Chapman</p>
+        <p>&copy; 2024 Made with &hearts; by Hayden Chapman</p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
