--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Web Design by Hayden Chapman 2021-->
+<!--Web Design by Hayden Chapman 2024-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="/main.css">
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9KS582NLGQ"></script>
 <script>
@@ -53,7 +54,7 @@
 
         <div class="landing-text">
             <h1>Hello, my name is Hayden Chapman</h1>
-            <h3>I am a full stack software developer, welcome!</h3>
+            <h2>I am a full stack software developer, welcome!</h2>
             <br>
             <h6>I'm glad you have taken the time to come to my website, please view more of my work below.</h6>
         </div>
@@ -157,7 +158,7 @@
         <div class="containter">
             <div class="section-heading">
                 <h1>Portfolio</h1>
-                <h6>View some of my recent work</h6>
+                <h6>View some of my work and projects</h6>
             </div>
 
             <div class="portfolio-item" data-aos="fade-left" data-aos-delay="600">
