wording and font changes

--- a/index.html
+++ b/index.html
@@ -53,17 +53,15 @@
         </nav>
 
         <div class="landing-text">
-            <h1>Hello, my name is Hayden Chapman</h1>
-            <h2>I am a full stack software developer, welcome!</h2>
-            <br>
-            <h6>I'm glad you have taken the time to come to my website, please view more of my work below.</h6>
+            <h1>Hayden Chapman</h1>
+            <h6>Hello! I am a full stack software developer based out of DFW, welcome!</h6>
+            <h6>I am currently seeking developer positions in the DFW area, please view more of my resume/work below.</h6>
         </div>
     </header>
 
-    
     <ul class="nav-list" class="icon-link">
         <li>
-            <a href="/Resume-HaydenChapman.pdf"><h6>resume.</h6></a>              
+            <a href="/Resume-HaydenChapman.pdf"><h6>resume</h6></a>              
         </li>
     </ul>
 
