--- a/index.html
+++ b/index.html
@@ -87,14 +87,12 @@
                     
                 </div>
                     <p>
-                        I am software engineer with experience in both frontend and backend tech, as well as CRM/SEO/Marketing software.
+                        I am software engineer with experience in both frontend and backend tech, as well as CRM/SEO/Marketing software, including Salesforce.
                         <br>
                         I am currently seeking engineer/developer positions in the DFW area or remote.
                         <br>
-                        I have strong interest in human computer interaction, decentralized applications and automotive engineering & motorsports. <br>
+                        I have strong interest in human-computer interactions, decentralized applications and automotive-engineering & motorsports. <br>
                         { I like computers, code, cars and robots.... and robot cars. }<br>
-                        <br>
-                        I enjoy the intersection of art and technology.
                         <br>
                         <img src="me.jpg">
                     </p>
