--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                     <p>
                         <ul>
                             <li>HTML5 / CSS3 / JavaScript / React</li>
+                            <li>Bootstrap / TailwindCSS / SemanticUI</li>
+                            <li>UI Design with Figma / Canva / AdobeSuite</li>
                         </ul>
                     </p>
                 </div>
@@ -143,6 +145,7 @@
                         <li>Bcrypt / AWS / Netlify</li>
                         <li>PgAdmin / PostgreSQL / BitIO</li>
                         <li>VMware / Wireshark</li>
+                        <li>Salesforce Admin</li>
                         </ul>
                     </p>
                 </div>
