--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         I have strong interest in human-computer interactions, decentralized applications and automotive-engineering & motorsports. <br>
                         { I like computers, code, cars and robots.... and robot cars. }<br>
                         <br>
-                        <img src="me.jpg">
+                        <!--<img src="me.jpg">-->
                     </p>
                 </div>  
             </div>
